--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Logs
 logs
 *.env
+*.env.local
 .env
+.env.local
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -28,4 +30,5 @@ backend/.env
 /backend/photos
 backend/.env
 package.json
+backend/.env.local
 package-lock.json
